--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://os.ryo.lu http://localhost:3000"
+          "value": "https://os.ryo.lu https://nora-he.com https://www.nora-he.com http://localhost:3000"
         }
       ]
     },
