--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,20 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://os.ryo.lu https://nora-he.com https://www.nora-he.com http://localhost:3000"
+          "value": "https://os.ryo.lu https://os.nora-he.com https://nora-he.com https://www.nora-he.com http://localhost:3000"
+        }
+      ]
+    },
+    {
+      "source": "/assets/:path*",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     },
