Add message-in-bottle feature and fix data parsing issues
- Add message-in-bottle API endpoint with Edge Function support
- Fix Redis data parsing for bottle retrieval
- Add message-in-bottle app component
- Update app registry and configuration
- Improve error handling and data validation

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port ${PORT:-5173}",
+    "dev:vercel": "vercel dev --listen 3000 --yes",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
