--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ryOS",
-  "short_name": "ryOS",
+  "name": "noraOS",
+  "short_name": "noraOS",
   "description": "A web-based OS experience, made with Cursor",
   "start_url": "/",
   "display": "standalone",
