Fix pusher-beams API: add vercel.json config and improve error handling

--- a/vercel.json
+++ b/vercel.json
@@ -195,6 +195,9 @@
   "functions": {
     "api/message-in-bottle.ts": {
       "maxDuration": 60
+    },
+    "api/pusher-beams.ts": {
+      "maxDuration": 30
     }
   }
 }
