--- a/tsconfig.api.json
+++ b/tsconfig.api.json
@@ -6,7 +6,7 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "strict": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
